# orchestration-service

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway-env-example.txt  requirements-dev.txt  requirements.txt
.bmad-core/: install-manifest.yaml
app/: __init__.py  config.py  database.py  main.py
app/api/: approval.py  escalation.py  health.py  metrics.py  orchestration.py  payment_plan.py  workflow.py
app/core/: circuit_breaker.py  config.py  degradation.py  dependencies.py  exceptions.py  logging.py  middleware.py  retry.py
app/database/: escalation_repository.py
app/models/: __init__.py  ai_response.py  database.py  escalation.py  payment_plan.py  schemas.py  workflow.py
app/schemas/: approval.py  escalation.py  incoming_sms.py  metrics.py  payment_plan.py  workflow.py
app/services/: ai_service.py  approval_service.py  collections_monitor.py  database.py  escalation_service.py  external.py  metrics_service.py  notification_service.py  openai_service.py  payment_plan_service.py  sms_agent.py  workflow_service.py
app/utils/: confidence_scoring.py  escalation_triggers.py  payment_plan_extraction.py  timeout_monitor.py
dev-docs/: QUICK-REFERENCE.md  dashboard-integration-map.md  disclaimer.md  kurt-orchestration-spec.md  necessary-services.md
docs/: architecture.md  prd.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: epic-details.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/qa/gates/: 1.1.service-setup-basic-health-endpoints.yml  1.2.external-service-integration-external-service-integration.yml  1.3-ai-response-generation.yml  (+6 more)
docs/stories/: 1.1.service-setup-and-basic-health-endpoints.md  1.1.service-setup-basic-health-endpoints.md  1.2.external-service-integration.md  1.3.ai-response-generation.md  1.4.approval-workflow-implementation.md  1.5.workflow-status-tracking.md  1.6.missing-core-endpoints.md  2.1.payment-plan-detection.md  2.2.escalation-logic-implementation.md  3.1.error-handling-circuit-breakers.md  3.2.metrics-monitoring.md
migrations/: env.py
tests/: conftest.py
tests/test_api/: test_approval.py  test_escalation.py  test_health.py  test_metrics.py  test_orchestration.py  test_payment_plan.py  test_workflow.py
tests/test_core/: test_circuit_breaker.py  test_enhanced_logging.py  test_exceptions.py  test_retry.py
tests/test_services/: test_ai_service.py  test_approval_service.py  test_collections_monitor.py  test_escalation_service.py  test_metrics_service.py  test_payment_plan_service.py  test_sms_agent.py  test_workflow_service.py
tests/test_utils/: test_confidence_scoring.py  test_escalation_triggers.py  test_payment_plan_extraction.py  test_timeout_monitor.py
